# rgb2spec-rs

./: Cargo.toml  LICENSE  README.md
examples/: load.rs  out.spec
src/: optimize-cli.rs  optimize.rs  rgb2spec.rs
src/optimize/: cie1931.rs  gamut.rs  lower_upper.rs
